<resources>
    <string name="app_name">Liking App</string>
    <string name="personal_info">Dados Pessoais</string>
    <string name="name">Nome</string>
    <string name="surname">Sobrenome</string>
    <string name="log_in">Log in</string>
    <string name="password">Senha</string>
    <string name="checkbox_save_info">Salvar Credenciais</string>
    <string name="logo">Logo</string>
    <string name="register">Registre-se</string>
    <string name="facebook_icon">Ícone do Facebook</string>
    <string name="gmail_icon">Ícone do Gmail</string>
    <string name="acess_gallery">Acessar API</string>
    <string name="acess_register">Acessar Cadastro</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="email">email</string>
    <string name="confirmar">Confirmar</string>
    <string name="people">Pessoas</string>
    <string name="search">Pesquisar</string>
    <string name="add_person">Adicionar Pessoa</string>
    <string name="register_person">Cadastrar Pessoas</string>
    <string name="avatar">Avatar</string>
    <string name="birthday_date">Data de Nascimento</string>
    <string name="phone_number">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="complete_fields">Complete Todos os Campos</string>
    <string name="insert_valid_email">Insira um Email Válido</string>
    <string name="email_exists">Email Já Cadastrado</string>
    <string name="register_button">Cadastrar</string>
    <string name="user_exists">Usuário Já Cadastrado</string>
    <string name="user_dont_exist">Usuário Não Existe</string>
    <string name="incorrect_phone_format">Telefone Inválido</string>
    <string name="cpf_invalid">CPF Inválido</string>
    <string name="cpf_exists">CPF Já Existe</string>
    <string name="success_login">Login Realizado com Sucesso</string>
    <string name="register_success">Cadastro Realizado com Sucesso</string>
    <string name="bin">Bin</string>
    <string name="edit">Edit</string>
    <string name="date_hint">01/01/2000</string>
    <string name="phone_hint">11 99876–5432</string>
    <string name="cpf_hint">123.456.789.10</string>
    <string name="my_list">Minha Lista</string>
    <string name="back">Voltar</string>
    <string name="error_api_access">Erro ao Acessar API</string>
    <string name="added_hero">Super Herói Adicionado à Lista</string>
    <string name="remove_hero">Super Herói Removido da Lista</string>
    <string name="my_list_hero">Minha Lista de Super Heróis</string>
    <string name="comics">comics</string>
    <string name="stories">histórias</string>
    <string name="series">séries</string>
    <string name="events">eventos</string>
    <string name="hero_avatar">Hero Avatar</string>
    <string name="super_hero_name">Super Hero Name</string>
    <string name="description_super_hero">description of super hero</string>
</resources>