<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="user"
            type="com.example.likingapp.models.OwnUser"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="280sp"
            android:layout_height="250sp"
            android:layout_marginStart="65sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:text="@string/personal_info" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextTextPersonName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:text="@={user.name}" />

                <View
                    android:id="@+id/divider4"
                    android:layout_width="75dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/surname"
                    android:inputType="textPersonName"
                    android:text="@={user.lastName}" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:text="@string/log_in" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/log_in"
                android:inputType="textPersonName"
                android:text="@={user.login}" />

            <TextView
                android:id="@+id/textViewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:text="@string/password" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={user.password}" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:checked="@={user.saveCredentials}"
                android:text="@string/checkbox_save_info" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="3sp"
                android:layout_weight="0"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/register"
                android:textAllCaps="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewFacebook"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/facebook_icon"
                    app:srcCompat="@drawable/facebook" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/imageViewGmail"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/gmail_icon"
                    app:srcCompat="@drawable/gmail" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAccess"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="0"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/acess_register" />

            <Button
                android:id="@+id/buttonApi"
                style="@style/MyButtonStyle"
                android:background="@drawable/bg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:fontFamily="@font/montserrat_semi_bold"
                android:text="@string/acess_gallery" />
        </LinearLayout>

    </LinearLayout>
</layout>