<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="person"
            type="com.example.likingapp.models.Person" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="200sp"
            android:layout_height="170sp"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewLogo"
                android:layout_width="wrap_content"
                android:layout_height="136dp"
                android:contentDescription="@string/logo"
                app:srcCompat="@drawable/logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_person" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewAvatar"
                android:layout_width="wrap_content"
                android:layout_height="107dp"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:contentDescription="@string/avatar"
                tools:srcCompat="@tools:sample/avatars[1]" />

            <TextView
                android:id="@+id/textViewAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:text="@string/avatar"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:text="@string/name"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editTextPersonName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:text="@={person.name}"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewLastName1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:layout_weight="0"
                        android:text="@string/surname"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/editTextLastName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/surname"
                        android:inputType="textPersonName"
                        android:text="@={person.lastName}"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:layout_weight="0"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewBirthday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:layout_weight="0"
                        android:text="@string/birthday_date"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <mk.webfactory.dz.maskededittext.MaskedEditText
                            android:id="@+id/editTextBirthday"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="date"
                            android:hint="@string/date_hint"
                            android:text="@={person.birthday}"
                            android:gravity="center"
                            app:maskededittext_enforceMaskLength="true"
                            app:maskededittext_mask="##/##/####"
                            app:maskededittext_maskCharacter="#"
                            android:textSize="14sp" />

                        <ImageView
                            android:id="@+id/imageViewCalendar"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_weight="0"
                            app:srcCompat="@drawable/calendar" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="45dp"
                    android:layout_height="1dp"
                    android:background="?attr/actionBarItemBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewPhone1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="3sp"
                        android:layout_weight="0"
                        android:text="@string/phone_number"
                        android:textSize="12sp" />

                    <mk.webfactory.dz.maskededittext.MaskedEditText
                        android:id="@+id/editTextPersonPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:inputType="phone"
                        android:text="@={person.phone}"
                        android:hint="@string/phone_hint"
                        app:maskededittext_enforceMaskLength="true"
                        app:maskededittext_mask="## #####-####"
                        app:maskededittext_maskCharacter="#"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewcpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:layout_weight="0"
                    android:text="@string/cpf"
                    android:textSize="12sp" />

                <mk.webfactory.dz.maskededittext.MaskedEditText
                    android:id="@+id/editTextCpf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:inputType="number"
                    android:text="@={person.cpf}"
                    android:hint="@string/cpf_hint"
                    app:maskededittext_enforceMaskLength="true"
                    app:maskededittext_mask="###.###.###-##"
                    app:maskededittext_maskCharacter="#"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5sp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewEmail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3sp"
                    android:layout_weight="0"
                    android:text="@string/email"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/editTextEmail2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={person.email}"
                    android:textSize="14sp" />
            </LinearLayout>

            <Button
                android:id="@+id/buttonAccess"
                style="@style/MyButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="15dp"
                android:layout_weight="0"
                android:text="@string/register_button" />

        </LinearLayout>

    </LinearLayout>
</layout>